--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!--
 	@license
-	Made by: Liyas Thomas
+	Made by: Thomas Fihla
 
-	Copyright (c) 2018 Liyas Thomas (https://liyas-thomas.firebaseapp.com)
+	Copyright (c) 2018 Visar Labs(https://visar.co.za)
 
 	ALL RIGHTS RESERVED. ALL WRONGS RESERVED.
 
@@ -120,14 +120,16 @@
 	<div class="container">
 		<div>
 			<h1>
-				<span class="demo e">L</span>
-				<span class="demo o">v</span>
-				<span class="demo a">r</span>
+				<span class="demo e">V</span>
+				<span class="demo o">I</span>
+				<span class="demo a">S</span>
+				<span class="demo b">A</span>
+				<span class="demo u"<R</span>
 			</h1>
 		</div>
 		<div>
-			<p>Augmented Reality Enhanced Computer Aided Education</p>
-			<p>Developed by <a class="u" href="https://liyas-thomas.firebaseapp.com">&nbsp;Liyas Thomas&nbsp;</a></p>
+			<p>Augmented reality platform to make education fun & interactive/p>
+			<p>Developed by <a class="u" href="https://visar.co.za/lvr">&nbsp;Visar Labs&nbsp;</a></p>
 		</div>
 	</div>
 	<div class="container">
