Properly relinked and indexed files

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-<<<<<<< HEAD
+
 	<title>VISAR_AR</title>
 	<meta name="description" content="Live Augmented Reality">
-=======
+
 	<title>Lvr</title>
 	<meta name="description" content="L virtual reality">
->>>>>>> 438ca0e16809075cfdcd96284fdb70630311f27f
+
 	<link rel="shortcut icon" href="assets/images/favicon.png">
 	<meta name="theme-color" content="#000">
 	<meta name="mobile-web-app-capable" content="yes">
@@ -171,7 +171,7 @@
 	<div class="container">
 		<div>
 			<h1>
-<<<<<<< HEAD
+
 				<span class="demo a">V</span>
 				<span class="demo e">I</span>
 				<span class="demo i">S</span>
@@ -182,7 +182,7 @@
 		<div>
 			<p>Demonstration of Physics using VISAR &amp; Answer series</p>
 			<p>About Us <a class="demo" href="https://www.visar.co.za">VISAR Labs</a></p>
-=======
+
 				<span class="demo e">V</span>
 				<span class="demo o">I</span>
 				<span class="demo a">S</span>
@@ -193,12 +193,12 @@
 		<div>
 			<p>Augmented reality platform to make education fun & interactive/p>
 			<p>Developed by <a class="u" href="https://visar.co.za/lvr">&nbsp;Visar Labs&nbsp;</a></p>
->>>>>>> 438ca0e16809075cfdcd96284fdb70630311f27f
+
 		</div>
 	</div>
 	<div class="container">
 		<div>
-<<<<<<< HEAD
+
 	<a class="demo a" href="https://visar.co.za/Ammo.lab/#supermaket" target="_blank">Vertical Projectile Motion</a>
 	<a class="demo e" href="https://visar.co.za/Ammo.lab/#tower" target="_blank">Newton’s First Law</a>
 	<a class="demo i" href="src/architecture.html" target="_blank">Carbon Chemistry</a>
@@ -206,28 +206,10 @@
 	<a class="demo u" href="https://visar.co.za/three.js/examples/webgl_loader_pdb.html" target="_blank">Organic Chemistry</a>
 	<a class="demo a" href="https://visar.co.za/three.js/examples/webgl_gpgpu_water.html" target="_blank">Viscocity</a>
 	<a class="demo e" href="src/chemistry.html" target="_blank">Chemistry</a>
-	<a class="demo i" href="src/electronics.html" target="_blank">Electronics</a>
+	<a class="demo i" href="demo.html" target="_blank">AR Demos</a>
 	<a class="demo o" href="src/ptable.html" target="_blank">Periodic Table</a>
-	<a class="demo i" href="src/geography.html" target="_blank">Geography</a>
+	<a class="demo u" href="https://visar.co.za/molecule3D/index.php" target="_blank">MoleculeViewer</a>
 <!--			<a class="demo e" href="src/scan.html" target="_blank">Video&nbsp;feed</a>-->
-=======
-			<a class="demo a" href="src/alphabets.html" target="_blank">Alphabets</a>
-			<a class="demo e" href="src/animals.html" target="_blank">Animals</a>
-			<a class="demo i" href="src/architecture.html" target="_blank">Architecture</a>
-			<a class="demo o" href="src/automobile.html" target="_blank">Automobile</a>
-			<a class="demo u" href="src/biology.html" target="_blank">Biology</a>
-			<a class="demo a" href="src/business.html" target="_blank">Business&nbsp;card</a>
-			<a class="demo e" href="src/chemistry.html" target="_blank">Chemistry</a>
-			<a class="demo i" href="src/electronics.html" target="_blank">Electronics</a>
-			<a class="demo o" href="src/ecommerce.html" target="_blank">E-commerce</a>
-			<a class="demo u" href="src/entertainment.html" target="_blank">Entertainment</a>
-			<a class="demo a" href="src/film.html" target="_blank">Movie</a>
-			<a class="demo e" href="src/food.html" target="_blank">Food</a>
-			<a class="demo i" href="src/geography.html" target="_blank">Geography</a>
-			<a class="demo o" href="src/brocode.html" target="_blank">Brocode</a>
-			<a class="demo u" href="src/arhunt.html" target="_blank">AR Hunt</a>
-			<a class="demo e" href="src/scan.html" target="_blank">Video&nbsp;feed</a>
->>>>>>> 438ca0e16809075cfdcd96284fdb70630311f27f
 		</div>
 	</div>
 </body>
