--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 				<span class="demo o">I</span>
 				<span class="demo a">S</span>
 				<span class="demo b">A</span>
-				<span class="demo u"<R</span>
+				<span class="demo u">R</span>
 			</h1>
 		</div>
 		<div>
